--- a/TeamBuddy.App/Views/HomeTeamListView.xaml
+++ b/TeamBuddy.App/Views/HomeTeamListView.xaml
@@ -18,19 +18,19 @@
 
         <TextBlock Grid.Row="0" Text="My Teams:" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="40" FontFamily="Ink Free" FontWeight="Bold"/>
         <Grid Grid.Row="1" Margin="50 20 50 20">
-            <ListView x:Name="TeamsListBox" Background="Transparent" Width="500" ItemsSource="{Binding Teams}" Margin="0" Panel.ZIndex="-1">
+            <ListBox x:Name="TeamsListBox" Background="Transparent" Width="500" ItemsSource="{Binding Teams}" Margin="0" Panel.ZIndex="-1">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="SelectionChanged">
                         <i:InvokeCommandAction Command="{Binding TeamSelectedCommand}"
                                                CommandParameter="{Binding ElementName=TeamsListBox, Path=SelectedItem}"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
-                <ListView.ItemTemplate>
+                <ListBox.ItemTemplate>
                     <DataTemplate>
                         <Label Content="{Binding Name}" FontSize="30" Cursor="Hand" Opacity="0.8" />
                     </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+                </ListBox.ItemTemplate>
+            </ListBox>
         </Grid>
     </Grid>
 </UserControl>
